Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 .container {
 	background-color: #000000;
-	width: 1100px;
+	width: 1200px;
 	height: 95vh;
 	margin: 0 auto;
 	border-bottom-width: 0px;
